--- a/gb/18/4/28/n10344708.md
+++ b/gb/18/4/28/n10344708.md
@@ -1,12 +1,12 @@
 <a name="1" id="1" target="_blank"></a><span id="1"></span>
-<table align=center border="0"><tr><td colspan="2" VALIGN=TOP><a href="https://github.com/nsxsof363/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/nsxsof363/www/master/t/djy/1.jpg" title="大纪元"></a><a href="https://github.com/nsxsof363/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/nsxsof363/www/master/t/djy/3.jpg" title="国际新闻"></a><a href="https://github.com/nsxsof363/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/nsxsof363/www/master/t/djy/4.jpg" title="大陆新闻"></a><a href="https://github.com/nsxsof363/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/nsxsof363/www/master/t/djy/5.jpg" title="评论"></a><a href="https://github.com/nsxsof363/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/nsxsof363/www/master/t/djy/6.jpg" title="文化"></a><a href="https://github.com/nsxsof363/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/nsxsof363/www/master/t/djy/7.jpg" title="生活"></a><a href="https://github.com/nsxsof363/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/nsxsof363/www/master/t/djy/8.jpg" title="娱乐"></a><a href="https://github.com/nsxsof363/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/nsxsof363/www/master/t/djy/9.jpg" title="健康"><a href="https://github.com/nsxsof363/djy/blob/master/gb/nf6092.md#1"><img src="https://raw.githubusercontent.com/nsxsof363/www/master/t/djy/10a.jpg" title="独家"></a><a href="https://github.com/nsxsof363/djy/blob/master/gb/nf4514.md#1"><img src="https://raw.githubusercontent.com/nsxsof363/www/master/t/djy/12a.jpg" title="头条"></a></td></tr>
-<tr><td colspan="2" VALIGN=TOP><a target="_blank" href="https://github.com/nsxsof363/djy/blob/master/gb/9p.md#1">社论</a> | <a target="_blank" href="https://github.com/nsxsof363/djy/blob/master/gb/nf5657.md#1">三退</a> | <a target="_blank" href="https://github.com/nsxsof363/djy/blob/master/gb/nf6124.md#1">诉江</a> | <a target="_blank" href="https://github.com/nsxsof363/djy/blob/master/gb/nf1176117.md#1">中共卖国</a> | <a target="_blank" href="https://github.com/nsxsof363/djy/blob/master/gb/nf5773.md#1">贪腐淫乱</a> | <a target="_blank" href="https://github.com/nsxsof363/djy/blob/master/gb/nf1176115.md#1">窜改历史</a> | <a target="_blank" href="https://github.com/nsxsof363/djy/blob/master/gb/nf1176107.md#1">党魁画皮</a> | <a target="_blank" href="https://github.com/nsxsof363/djy/blob/master/gb/nf1320400.md#1">中共间谍</a> | <a target="_blank" href="https://github.com/nsxsof363/djy/blob/master/gb/nf1176114.md#1">破坏传统</a> | <a target="_blank" href="https://github.com/nsxsof363/ntdtv/blob/master/gb/prog447_1.md#1">恶贯满盈</a> | <a target="_blank" href="https://github.com/nsxsof363/djy/blob/master/gb/ncid278.md#1">人权</a> | <a target="_blank" href="https://github.com/nsxsof363/djy/blob/master/gb/nf1176111.md#1">迫害</a> | <a target="_blank" href="https://gitlab.com/szzdlab/mh-qikan/blob/master/README.md#1">期刊</a> | <a target="_blank" href="https://github.com/nsxsof363/www/blob/master/README.md?zsrh#8">翻墙</a></p><p><a target="_blank" href="https://github.com/nsxsof363/djy/blob/master/gb/nf5562.md#1">伪火</a> | <a target="_blank" href="https://github.com/nsxsof363/djy/blob/master/gb/nf4378.md#1">问答</a> | <a target="_blank" href="https://github.com/nsxsof363/djy/blob/master/gb/nf5792.md#1">剖析</a> | <a target="_blank" href="https://github.com/nsxsof363/djy/blob/master/gb/nf5735.md#1">两岸比对</a> | <a target="_blank" href="https://github.com/nsxsof363/djy/blob/master/gb/nf6119.md#1">各国褒奖</a> | <a target="_blank" href="https://github.com/nsxsof363/djy/blob/master/gb/nf6120.md#1">民众声援</a> | <a target="_blank" href="https://github.com/nsxsof363/djy/blob/master/gb/nf1188594.md#1">难忘记忆</a> | <a target="_blank" href="https://github.com/nsxsof363/djy/blob/master/gb/nf3180.md#1">海外弘传</a> | <a target="_blank" href="https://github.com/nsxsof363/djy/blob/master/gb/nf5410.md#1">万人上访</a> | <a target="_blank" href="https://github.com/nsxsof363/ntdtv/blob/master/gb/prog1530_1.md#1">和平抗议</a> | <a target="_blank" href="https://github.com/nsxsof363/djy/blob/master/gb/nf4386.md#1">支持</a> | <a target="_blank" href="https://github.com/nsxsof363/djy/blob/master/gb/nf4389.md#1">真相</a> | <a target="_blank" href="https://github.com/nsxsof363/djy/blob/master/gb/nf5790.md#1">圣缘</a> | <a target="_blank" href="https://github.com/nsxsof363/djy/blob/master/gb/nf4786.md#1">神韵</a></td></tr>
+<table align=center border="0"><tr><td colspan="2" VALIGN=TOP><a href="https://github.com/hxcaik307/djy/blob/master/gb/nf1351518.md#1"><img src="https://raw.githubusercontent.com/hxcaik307/www/master/t/djy/1.jpg" title="大纪元首页" alt="大纪元首页"></a><a href="https://github.com/hxcaik307/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/hxcaik307/www/master/t/djy/3.jpg" title="国际新闻" alt="国际新闻"></a><a href="https://github.com/hxcaik307/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/hxcaik307/www/master/t/djy/4.jpg" title="大陆新闻" alt="大陆新闻"></a><a href="https://github.com/hxcaik307/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/hxcaik307/www/master/t/djy/5.jpg" title="大纪元评论" alt="大纪元评论"></a><a href="https://github.com/hxcaik307/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/hxcaik307/www/master/t/djy/6.jpg" title="传统文化" alt="传统文化"></a><a href="https://github.com/hxcaik307/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/hxcaik307/www/master/t/djy/7.jpg" title="生活消费" alt="生活消费"></a><a href="https://github.com/hxcaik307/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/hxcaik307/www/master/t/djy/8.jpg" title="娱乐休闲" alt="娱乐休闲"></a><a href="https://github.com/hxcaik307/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/hxcaik307/www/master/t/djy/9.jpg" title="健康" alt="健康"></a><a href="https://github.com/hxcaik307/djy/blob/master/gb/nf6092.md#1"><img src="https://raw.githubusercontent.com/hxcaik307/www/master/t/djy/10a.jpg" title="独家" alt="独家"></a><a href="https://github.com/hxcaik307/djy/blob/master/gb/nf4514.md#1"><img src="https://raw.githubusercontent.com/hxcaik307/www/master/t/djy/12a.jpg" title="头条要闻" alt="头条要闻"></a></td></tr>
+<tr><td colspan="2" VALIGN=TOP><a target="_blank" href="https://github.com/hxcaik307/www/blob/master/README.md?zsrh#1">翻墙</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf5657.md#1">三退</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf6124.md#1">诉江</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf1176117.md#1">中共卖国</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf5773.md#1">贪腐淫乱</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf1176115.md#1">窜改历史</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf1176107.md#1">党魁画皮</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf1320400.md#1">中共间谍</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf1176114.md#1">破坏传统</a> | <a target="_blank" href="https://github.com/hxcaik307/ntdtv/blob/master/gb/prog447_1.md#1">恶贯满盈</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/ncid278.md#1">人权</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf1176111.md#1">迫害</a> | <a target="_blank" href="https://gitlab.com/szzdlab/mh-qikan/blob/master/README.md#1">期刊</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf5562.md#1">伪火</a></p><p><a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/9p.md#1">社论</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf4378.md#1">问答</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf5792.md#1">剖析</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf5735.md#1">两岸比对</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf6119.md#1">各国褒奖</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf6120.md#1">民众声援</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf1188594.md#1">难忘记忆</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf3180.md#1">海外弘传</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf5410.md#1">万人上访</a> | <a target="_blank" href="https://github.com/hxcaik307/www/blob/master/README.md?zsrh#1">平台首页</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf4386.md#1">支持</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf4389.md#1">真相</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf5790.md#1">圣缘</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf4786.md#1">神韵</a></td></tr>
 <tr><td VALIGN=TOP width="626"><h2 align=center>昆州州立学校用电量飙升</h2>
 
 <h6></h6>
 <hr>
-<p>【大纪元2018年04月28日讯】（大纪元记者萧玉英澳洲布里斯本编译报导）昆州1200所<ahref="https://github.com/nsxsof363/djy/blob/master/gb/tag/%E5%B7%9E%E7%AB%8B%E5%AD%A6%E6%A0%A1.md#1">州立学校</a>的<ahref="https://github.com/nsxsof363/djy/blob/master/gb/tag/%E7%94%B5%E8%B4%B9.md#1">电费</a>在2年内由5,800万上升到6,760万，飙升1千万<ahref="https://github.com/nsxsof363/djy/blob/master/gb/tag/%E6%BE%B3%E5%85%83.md#1">澳元</a>。<ahref="https://github.com/nsxsof363/djy/blob/master/gb/tag/%E6%98%86%E5%B7%9E%E6%94%BF%E5%BA%9C.md#1">昆州政府</a>推出一项价值9,700万<ahref="https://github.com/nsxsof363/djy/blob/master/gb/tag/%E6%BE%B3%E5%85%83.md#1">澳元</a>的计划，包括对学校用电量的审计及提醒老师离开教室时要关灯。</p>
-<p>据布里斯本时报新闻网报导，澳洲竞争和消费者委员会（the Australian Competition and Consumer Commission）估计，2008至2017年间，昆州居民支付的<ahref="https://github.com/nsxsof363/djy/blob/master/gb/tag/%E7%94%B5%E8%B4%B9.md#1">电费</a>额增加了52%。教育部长Grace称，昆州<ahref="https://github.com/nsxsof363/djy/blob/master/gb/tag/%E5%B7%9E%E7%AB%8B%E5%AD%A6%E6%A0%A1.md#1">州立学校</a>的用电量是政府最大的能源消耗之一。</p>
+<p>【大纪元2018年04月28日讯】（大纪元记者萧玉英澳洲布里斯本编译报导）昆州1200所<ahref="https://github.com/hxcaik307/djy/blob/master/gb/tag/%E5%B7%9E%E7%AB%8B%E5%AD%A6%E6%A0%A1.md#1">州立学校</a>的<ahref="https://github.com/hxcaik307/djy/blob/master/gb/tag/%E7%94%B5%E8%B4%B9.md#1">电费</a>在2年内由5,800万上升到6,760万，飙升1千万<ahref="https://github.com/hxcaik307/djy/blob/master/gb/tag/%E6%BE%B3%E5%85%83.md#1">澳元</a>。<ahref="https://github.com/hxcaik307/djy/blob/master/gb/tag/%E6%98%86%E5%B7%9E%E6%94%BF%E5%BA%9C.md#1">昆州政府</a>推出一项价值9,700万<ahref="https://github.com/hxcaik307/djy/blob/master/gb/tag/%E6%BE%B3%E5%85%83.md#1">澳元</a>的计划，包括对学校用电量的审计及提醒老师离开教室时要关灯。</p>
+<p>据布里斯本时报新闻网报导，澳洲竞争和消费者委员会（the Australian Competition and Consumer Commission）估计，2008至2017年间，昆州居民支付的<ahref="https://github.com/hxcaik307/djy/blob/master/gb/tag/%E7%94%B5%E8%B4%B9.md#1">电费</a>额增加了52%。教育部长Grace称，昆州<ahref="https://github.com/hxcaik307/djy/blob/master/gb/tag/%E5%B7%9E%E7%AB%8B%E5%AD%A6%E6%A0%A1.md#1">州立学校</a>的用电量是政府最大的能源消耗之一。</p>
 <p>自由国家当领袖Deb Frecklington则表示，昆州学生的家长更希望这1千万澳元能用在学生及帮助老师上。她说：“我们应该保证用在教育上的每一元，都是为了我们孩子的利益。”</p>
 <p>Grace说：“州立学校将获得另一笔用于支付电费的资金款项，并不影响到教育、学习计划或教室翻新等其它项目。”</p>
 <p>Grace还表示，最新推进的学校再生能源计划的实施，将为学校节省1千万澳元的资金，有利于帮助政府到达2030年50%实现可再生能源的目标。她说：“9,700万澳元的项目，将在800多所学校实施高效节能计划，包括安装太阳能电池板。”“该举措还可以使学生和老师养成良好的习惯，如离开房间时关灯，打开空调后将门关上等。”</p>
@@ -18,48 +18,47 @@
 
 
 <strong>相关新闻：</strong>
-<li><a href="https://github.com/nsxsof363/djy/blob/master/gb/17/8/5/n9499282.md#1">邦德大学性侵率昆州大学最高</a></li>
-<li><a href="https://github.com/nsxsof363/djy/blob/master/gb/17/8/5/n9499312.md#1">昆州政府拟建新州立中学 引发家长迁居风潮</a></li>
-<li><a href="https://github.com/nsxsof363/djy/blob/master/gb/17/11/18/n9859834.md#1">昆士兰大选：州长对悬峙议会不置评</a></li>
-<li><a href="https://github.com/nsxsof363/djy/blob/master/gb/18/2/5/n10115834.md#1">联邦教育部长吁中小学教室禁用智能手机</a></li>
-<li><a href="https://github.com/nsxsof363/djy/blob/master/gb/18/2/6/n10118336.md#1">数百昆州学生鞋跟不合规被留校</a></li>
-<li><a href="https://github.com/nsxsof363/djy/blob/master/gb/18/2/15/n10145727.md#1">州政府望改革全澳洲语文数学统考NAPLAN</a></li>
-<li><a href="https://github.com/nsxsof363/djy/blob/master/gb/18/3/1/n10181341.md#1">澳总理敦促全澳学校校长铲除欺凌与暴力</a></li>
-<li><a href="https://github.com/nsxsof363/djy/blob/master/gb/18/3/9/n10203187.md#1">诺布尔公园小学从墨尔本到凯恩斯的跨州文化交流</a></li>
-<li><a href="https://github.com/nsxsof363/djy/blob/master/gb/18/3/12/n10210595.md#1">澳洲人口增长速度惊人 政府应对棘手</a></li>
-<li><a href="https://github.com/nsxsof363/djy/blob/master/gb/18/3/12/n10210609.md#1">昆士兰北部洪区清理工作开始 部分学校仍关闭</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/17/8/5/n9499282.md#1">邦德大学性侵率昆州大学最高</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/17/8/5/n9499312.md#1">昆州政府拟建新州立中学 引发家长迁居风潮</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/17/11/18/n9859834.md#1">昆士兰大选：州长对悬峙议会不置评</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/18/2/5/n10115834.md#1">联邦教育部长吁中小学教室禁用智能手机</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/18/2/6/n10118336.md#1">数百昆州学生鞋跟不合规被留校</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/18/2/15/n10145727.md#1">州政府望改革全澳洲语文数学统考NAPLAN</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/18/3/1/n10181341.md#1">澳总理敦促全澳学校校长铲除欺凌与暴力</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/18/3/9/n10203187.md#1">诺布尔公园小学从墨尔本到凯恩斯的跨州文化交流</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/18/3/12/n10210595.md#1">澳洲人口增长速度惊人 政府应对棘手</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/18/3/12/n10210609.md#1">昆士兰北部洪区清理工作开始 部分学校仍关闭</a></li>
 <hr>
 
 
 <strong>编辑推荐：</strong>
-<li><a href="https://github.com/onzhi266/djy/blob/master/gb/20/2/22/n11887949.md#1">美参议员：中共刻意控制新冠病毒信息流动</a></li>
-<li><a href="https://github.com/tsiac2612/djy/blob/master/gb/19/2/12/n11038748.md#1" target="_blank">邢诒心：作为地主崽的童年</a></li><li><a href="https://github.com/nsxsof363/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank">303万人举报江泽民</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/17/6/30/n9338788.md#1" target="_blank">一张10年前的病历让湖北仙桃拘留所放人</a></li>
+<li><a href="https://github.com/upjkzu3674/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank">大陆见不到的震撼场面</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/18/4/17/n10311201.md#1" target="_blank">心升：以史为镜看毛邪（下）</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/19/8/30/n11488663.md#1" target="_blank">寻获生命真谛 法国医院院长分享修炼感悟</a></li>
 <hr>
 
 <strong>热门新闻：</strong>
-<li><a href="https://github.com/nsxsof363/djy/blob/master/gb/20/10/14/n12474369.md#1">日本出现“UFO空战”画面 多个追赶一个</a></li>
-<li><a href="https://github.com/nsxsof363/djy/blob/master/gb/20/10/16/n12479879.md#1">曾预言川普当选 传教士：上帝派天使助连任</a></li>
-<li><a href="https://github.com/nsxsof363/djy/blob/master/gb/20/9/30/n12440550.md#1">《圣经》与《推背图》预言的应验与变换1</a></li>
-<li><a href="https://github.com/nsxsof363/djy/blob/master/gb/20/9/3/n12378281.md#1">【西安事变?蒋宋夫妇】天降神谕 使命之行</a></li>
-<li><a href="https://github.com/nsxsof363/djy/blob/master/gb/20/9/17/n12411954.md#1">东西方地狱见闻 邪淫者的悲声</a></li>
-<li><a href="https://github.com/nsxsof363/djy/blob/master/gb/20/10/18/n12484332.md#1">【严真点评&amp;外交部大实话】拜登家丑闻 习南巡</a></li>
-<li><a href="https://github.com/nsxsof363/djy/blob/master/gb/20/10/19/n12485538.md#1">【拍案惊奇】纽时围川普救拜登 中共五中换人？</a></li>
-<li><a href="https://github.com/nsxsof363/djy/blob/master/gb/20/10/18/n12485056.md#1">【薇羽看世间】习近平南巡谈改革 走入死胡同</a></li>
-<li><a href="https://github.com/nsxsof363/djy/blob/master/gb/20/10/16/n12481651.md#1">【新闻看点】习突返京或3原因 拜登家丑闻连爆</a></li>
-<li><a href="https://github.com/nsxsof363/djy/blob/master/gb/20/10/17/n12482129.md#1">赵立坚诬蔑美军播毒论令川普愤怒至极</a></li>
-<li><a href="https://github.com/nsxsof363/djy/blob/master/gb/20/10/17/n12482636.md#1">大陆二手房市场分化严重 房地产泡沫要破？</a></li>
-<li><a href="https://github.com/nsxsof363/djy/blob/master/gb/20/10/16/n12481456.md#1">刘诗诗自曝不愿上综艺 个中原因令人吃惊</a></li>
-<li><a href="https://github.com/nsxsof363/djy/blob/master/gb/20/10/16/n12481895.md#1">传周星驰重金续约林允 为对赌协议添保障</a></li>
-<li><a href="https://github.com/nsxsof363/djy/blob/master/gb/20/10/18/n12484792.md#1">洪金宝拄拐杖近照曝光 网民惊讶</a></li>
-<li><a href="https://github.com/nsxsof363/djy/blob/master/gb/20/10/17/n12482595.md#1">TWICE定延心理不安 暂不参与正规二辑等活动</a></li>
-<li><a href="https://github.com/nsxsof363/djy/blob/master/gb/20/10/18/n12484953.md#1">章子怡产后首秀 发际线上移引热议</a></li>
-<li><a href="https://github.com/nsxsof363/djy/blob/master/gb/20/10/16/n12480422.md#1">宝特瓶当水壶 10岁女童皮肤流汤、月经提早来</a></li>
-<li><a href="https://github.com/nsxsof363/djy/blob/master/gb/20/10/6/n12455916.md#1">运动后吃对修复肌肉、改善疲劳 营养师推3食谱</a></li>
-<li><a href="https://github.com/nsxsof363/djy/blob/master/gb/20/10/16/n12481202.md#1">换季流鼻水、皮肤痒？过敏自救有一套</a></li>
-<li><a href="https://github.com/nsxsof363/djy/blob/master/gb/20/10/16/n12481545.md#1">自制3杯天然运动饮料 提升免疫力、改善疲劳</a></li>
-<li><a href="https://github.com/nsxsof363/djy/blob/master/gb/20/10/18/n12484089.md#1">两大一小的白鲸搁浅 俄罗斯男子花7小时营救</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/14/n13576716.md#1">【百年真相】亲历者揭秘“1952细菌战”真相</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/25/n13605590.md#1">【未解之谜】地球磁极倒转进行中??</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/28/n13610168.md#1">【神韵作品】唐瑞讲故事｜朗读｜小熊维尼第一章</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/22/n13597113.md#1">【百年真相】现代文字狱 胡风如何成了反革命？</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/17/n13582752.md#1">【奇事】两位卜算大师看出对方死期 但两人皆无法避过</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/3/1/n13614217.md#1">【财商天下】被踢出SWIFT 俄金融迅速“休克”</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/3/1/n13614863.md#1">《梁祝》小提琴协奏曲</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/3/2/n13615200.md#1">吴明德：中共暗撑俄侵乌 恐成国际大输家</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/26/n13607661.md#1">【更新2.27】乌总统：接下来24小时至关重要</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/28/n13610320.md#1">乌克兰用无人机摧毁俄导弹系统 视频曝光</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/27/n13609576.md#1">俄银行被切断SWIFT系统 中共角色更尴尬</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/27/n13609572.md#1">纳豆或暂退萤光幕一年 经纪人曝他最新病况</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/27/n13609465.md#1">看海狮资料一目十行过目不忘 杨幂展超强记忆力</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/28/n13612216.md#1">港星吴孟达过世一周年 长眠大马原因曝光</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/3/1/n13614888.md#1">赴韩拍戏皮肤长满红斑 范冰冰素颜照吓坏网友</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/3/1/n13614510.md#1">香港TVB艺人祝文君罹癌离世 终年55岁</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/28/n13612112.md#1">更强Omicron变种出现？致病性、传播力一次看</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/23/n13599631.md#1">疫苗、口罩难结束疫情 这一件事或成关键</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/26/n13607140.md#1">睡眠十大好处 提高脑力、抗衰老都在内</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/27/n13608014.md#1">多吃橙色食物 不只护眼 还有这些强大好处</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/27/n13607888.md#1">调查：十对夫妻中三对存在“财务不忠”</a></li>
 <hr>
 
-<strong>本文转自<a href="https://www.epochtimes.com">大纪元</a>（国内需用<a href="https://github.com/nsxsof363/www/blob/master/README.md#8">翻墙软件</a>才能访问）</strong><p>下载<a href="https://github.com/nsxsof363/www/blob/master/README.md#8">翻墙软件</a>浏览原文：<a href="https://www.epochtimes.com/gb/18/4/28/n10344708.htm">昆州州立学校用电量飙升</a></p><hr>
+<strong>本文转自<a href="https://www.epochtimes.com">大纪元</a>（国内需用<a href="https://github.com/hxcaik307/www/blob/master/README.md#8">翻墙软件</a>才能访问）</strong><p>下载<a href="https://github.com/hxcaik307/www/blob/master/README.md#8">翻墙软件</a>浏览原文：<a href="https://www.epochtimes.com/gb/18/4/28/n10344708.htm">昆州州立学校用电量飙升</a></p><hr>
 
-<strong>手机上长按并复制下面二维码分享本文章：</strong><br><br><img src="https://chart.apis.google.com/chart?cht=qr&chs=240x240&choe=UTF-8&chld=M|2&chl=https://github.com/nsxsof363/djy/blob/master/gb/18/4/28/n10344708.md%231" title="分享本文章"></td><td VALIGN=TOP><a href="https://github.com/nsxsof363/djy/blob/master/gb/16/1/21/n4622075.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/nsxsof363/djy/master/gb/300/wei-f1.jpg" title="中共的伪火骗局"  alt="中共的伪火骗局"></a><br><a href="https://github.com/nsxsof363/www/blob/master/README.md?dfh#9" target="_blank"><img src="https://raw.githubusercontent.com/nsxsof363/djy/master/gb/300/yong-h.jpg" title="永恒的见证"  alt="永恒的见证"></a><br><a href="https://github.com/nsxsof363/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/nsxsof363/djy/master/gb/300/shang-lnz.jpg" title="善良女子被中共投男牢"  alt="善良女子被中共投男牢"></a><br><a href="https://github.com/nsxsof363/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/nsxsof363/djy/master/gb/300/huo-z3.jpg" title="警卫目击活摘器官"  alt="警卫目击活摘器官"></a><br><a href="https://github.com/nsxsof363/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/nsxsof363/djy/master/gb/300/huo-z4.jpg" title="证人描述活摘恐怖"  alt="证人描述活摘恐怖"></a><br><a href="https://github.com/nsxsof363/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/nsxsof363/djy/master/gb/300/huo-z1.jpg" title="揭开活摘器官黑幕"  alt="揭开活摘器官黑幕"></a><br><a href="https://github.com/nsxsof363/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/nsxsof363/djy/master/gb/300/ma-ks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"></a><br><a href="https://github.com/nsxsof363/djy/blob/master/gb/14/6/9/n4173977.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/nsxsof363/djy/master/gb/300/chang-zs.jpg" title="藏字石 蕴天机"  alt="藏字石 蕴天机"></a><br><a href="https://github.com/nsxsof363/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/nsxsof363/djy/master/gb/300/st1.jpg" title="关注3亿人三退"  alt="关注3亿人三退"></a><br><a href="https://github.com/nsxsof363/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/nsxsof363/djy/master/gb/300/jie-t.jpg" title="解体中共复兴中华"  alt="解体中共复兴中华"></a><br><a href="https://github.com/nsxsof363/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/nsxsof363/djy/master/gb/300/gao-zs.jpg" title="中共迫害良心律师"  alt="中共迫害良心律师"></a><br><a href="https://github.com/nsxsof363/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/nsxsof363/djy/master/gb/300/sj1.jpg" title="303万人举报江泽民"  alt="303万人举报江泽民"></a><br><a href="https://github.com/nsxsof363/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/nsxsof363/djy/master/gb/300/sj2.jpg" title="这些官员为何起诉江泽民"  alt="这些官员为何起诉江泽民"></a><br><a href="https://github.com/nsxsof363/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/nsxsof363/djy/master/gb/300/liangan.jpg" title="海峡两岸的强烈对比"  alt="海峡两岸的强烈对比"></a><br><a href="https://github.com/nsxsof363/djy/blob/master/gb/15/12/10/n4593139.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/nsxsof363/djy/master/gb/300/jia-ndzl.jpg" title="加拿大总理的贺信"  alt="加拿大总理的贺信"></a><br><a href="https://github.com/nsxsof363/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/nsxsof363/djy/master/gb/300/xiao-wd.jpg" title="探寻真相兼听则明"  alt="探寻真相兼听则明"></a><br><a href="https://github.com/nsxsof363/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/nsxsof363/djy/master/gb/300/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"></a><br><a href="https://github.com/nsxsof363/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/nsxsof363/djy/master/gb/300/xie-j.jpg" title="不一样的海外校园"  alt="不一样的海外校园"></a><br><a href="https://github.com/nsxsof363/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/nsxsof363/djy/master/gb/300/li-up.jpg" title="从大师到徒弟的传奇"  alt="从大师到徒弟的传奇"></a><br><a href="https://github.com/nsxsof363/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/nsxsof363/djy/master/gb/300/zfl2.jpg" title="亿万人与东方一本奇书"  alt="亿万人与东方一本奇书"></a><br><a href="https://github.com/nsxsof363/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/nsxsof363/djy/master/gb/300/zhen-h.jpg" title="大陆见不到的震撼场面"  alt="大陆见不到的震撼场面"></a><br><a href="https://github.com/nsxsof363/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/nsxsof363/djy/master/gb/300/dalu-sk.jpg" title="人心向善 大陆当初盛况"  alt="人心向善 大陆当初盛况"></a><br><a href="https://github.com/nsxsof363/djy/blob/master/gb/19/1/5/n10955468.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/nsxsof363/djy/master/gb/300/zfl1.jpg" title="追寻真理 这书讲什么"  alt="追寻真理 这书讲什么"></a><br><a href="https://github.com/nsxsof363/www/blob/master/README.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/nsxsof363/djy/master/gb/300/fq1.jpg" title="下载免费翻墙软件"  alt="下载免费翻墙软件"></a><br></td></tr></table>
+<strong>手机上长按并复制下面二维码分享本文章：</strong><br><br><img src="https://chart.apis.google.com/chart?cht=qr&chs=240x240&choe=UTF-8&chld=M|2&chl=https://github.com/hxcaik307/djy/blob/master/gb/18/4/28/n10344708.md%231" title="分享本文章"></td><td VALIGN=TOP><a href="https://github.com/hxcaik307/djy/blob/master/gb/16/1/21/n4622075.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/wei-f1.jpg" title="中共的伪火骗局"  alt="中共的伪火骗局"></a><br><a href="https://github.com/hxcaik307/www/blob/master/README.md?dfh#9" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/yong-h.jpg" title="永恒的见证"  alt="永恒的见证"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/shang-lnz.jpg" title="善良女子被中共投男牢"  alt="善良女子被中共投男牢"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/huo-z3.jpg" title="警卫目击活摘器官"  alt="警卫目击活摘器官"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/huo-z4.jpg" title="证人描述活摘恐怖"  alt="证人描述活摘恐怖"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/huo-z1.jpg" title="揭开活摘器官黑幕"  alt="揭开活摘器官黑幕"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/ma-ks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/14/6/9/n4173977.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/chang-zs.jpg" title="藏字石 蕴天机"  alt="藏字石 蕴天机"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/st1.jpg" title="关注三亿人三退"  alt="关注三亿人三退"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/jie-t.jpg" title="解体中共复兴中华"  alt="解体中共复兴中华"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/gao-zs.jpg" title="中共迫害良心律师"  alt="中共迫害良心律师"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/sj1.jpg" title="三百多万人举报江泽民"  alt="三百多万人举报江泽民"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/sj2.jpg" title="这些官员为何起诉江泽民"  alt="这些官员为何起诉江泽民"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/liangan.jpg" title="海峡两岸的强烈对比"  alt="海峡两岸的强烈对比"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/15/12/10/n4593139.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/jia-ndzl.jpg" title="加拿大总理的贺信"  alt="加拿大总理的贺信"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/xiao-wd.jpg" title="探寻真相兼听则明"  alt="探寻真相兼听则明"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/xie-j.jpg" title="不一样的海外校园"  alt="不一样的海外校园"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/li-up.jpg" title="从大师到徒弟的传奇"  alt="从大师到徒弟的传奇"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/zfl2.jpg" title="亿万人与东方一本奇书"  alt="亿万人与东方一本奇书"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/zhen-h.jpg" title="大陆见不到的震撼场面"  alt="大陆见不到的震撼场面"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/dalu-sk.jpg" title="人心向善 大陆当初盛况"  alt="人心向善 大陆当初盛况"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/19/1/5/n10955468.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/zfl1.jpg" title="追寻真理 这书讲什么"  alt="追寻真理 这书讲什么"></a><br><a href="https://github.com/hxcaik307/www/blob/master/README.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/fq1.jpg" title="下载免费翻墙软件"  alt="下载免费翻墙软件"></a><br></td></tr></table>
